force-app/main/default/objects/Apttus__CycleTimeFieldData__c/Apttus__CycleTimeFieldData__c.object-meta.xml
<CustomObject>
    <description>Holds the data captured on fields for cycle time reporting</description>
    <label>Cycle Time Field Data</label>
    <nameField>
        <displayFormat>CTFD-{00000000}</displayFormat>
        <label>CT Field Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cycle Time Field Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>