force-app/main/default/objects/Apttus__CycleTimeFieldData__c/fields/Apttus__After__c.field-meta.xml
<CustomField>
    <fullName>Apttus__After__c</fullName>
    <description>The field value after the modification</description>
    <label>After</label>
    <length>80</length>
    <type>Text</type>
</CustomField>