force-app/main/default/objects/Apttus__CycleTimeFieldData__c/fields/Apttus__Before__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Before__c</fullName>
    <description>The field value before the modification</description>
    <label>Before</label>
    <length>80</length>
    <type>Text</type>
</CustomField>