force-app/main/default/objects/Apttus__CycleTimeFieldData__c/fields/Apttus__Begin_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Begin_Datetime__c</fullName>
    <description>The datetime when the field acquired the before value</description>
    <label>Begin Datetime</label>
    <type>DateTime</type>
</CustomField>