force-app/main/default/objects/Apttus__CycleTimeFieldData__c/fields/Apttus__Cycle_Time_Field__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Cycle_Time_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The field associated with the cycle time data</description>
    <label>Cycle Time Field</label>
    <referenceTo>Apttus__CycleTimeField__c</referenceTo>
    <relationshipLabel>Cycle Time Field Data</relationshipLabel>
    <relationshipName>Cycle_Time_Field_Data</relationshipName>
    <type>Lookup</type>
</CustomField>