force-app/main/default/objects/Apttus__CycleTimeFieldData__c/fields/Apttus__End_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Apttus__End_Datetime__c</fullName>
    <description>The datetime when the field acquired the after value</description>
    <label>End Datetime</label>
    <type>DateTime</type>
</CustomField>